# mosres

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_05_16_2316-58d8c1c1d1d7_.py  2026_05_17_0042-10d01f2670aa_.py  2026_05_17_0045-3cd35a818d85_.py  2026_05_17_0045-798bae62123b_.py  2026_05_17_0121-2a8aedd7e8ac_.py  2026_05_17_0953-27b0aa178977_.py  2026_05_17_1110-4de7b731d320_.py  2026_05_17_1114-573c1dcf2b76_.py  2026_05_17_1228-be777bc26b69_.py  2026_05_18_0834-6f26d58a6965_.py  2026_05_18_1213-9e922bc6ec28_.py  2026_05_18_1218-2d63f9486493_.py  2026_05_18_1630-df32fe622d08_.py  2026_05_19_2239-885b671a1083_.py  2026_06_02_1612-781b4abbddb4_.py  2026_06_03_1314-bdd8b8868e85_.py  2026_06_03_1315-0c7533763fa2_.py  2026_06_06_1143-e68a81f738f4_.py
src/: api.py  client.py  config.py  database.py  depends.py  mixins.py  models.py  pg_definitions.py  repository.py  schemas.py  service.py  utils.py
src/sql/: backup_from_excel_file.sql  buildings_history_trigger.sql  new_apart_history_trigger.sql  table_with_versions.sql
src/triggers/: new_apart_history_trigger.sql
