[project]
name = "mosres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.28.2",
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[postgres]>=2.0.49",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
    "xlsxwriter>=3.2.9",
]
