[project]
name = "mosres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.28.2",
    "aiohttp>=3.13.5",
    "aiohttp-retry>=2.9.1",
    "alembic>=1.18.4",
    "alembic-utils>=0.8.8",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
    "xlsxwriter>=3.2.9",
]
